--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
   <title>Colleges Recommender</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
 </head>
 
 <body>
